Update title weight and statistiche